kubernetes.yaml
---
#kubectl annotate deploy/alpine deployment.kubernetes.io/triggered-by=configmap/alpine -n demo
#kubectl create configmap flectra-conf --from-file openerp-server.conf -o yaml --dry-run | kubectl replace -f -

apiVersion: v1
kind: Service
metadata:
  name: flectra
spec:
  ports:
  - name: flectra-longpoll
    port: 7072
    targetPort: 7072
    protocol: TCP
  - name: flectra
    port: 7073
    targetPort: 7073
    protocol: TCP
  selector:
    app: flectra
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flectra
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - flectra.192.168.42.4.xip.io
    secretName: flectra-tls
  rules:
  - host: flectra.192.168.42.4.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: flectra
          servicePort: 7073
      - path: /longpolling
        backend:
          serviceName: flectra
          servicePort: 7072
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flectra
  labels:
    name: flectra
    version: 0.0.1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flectra
    spec:
        containers:
        - name: flectra
          image: oondeo/flectra:1.4
          imagePullPolicy: Always
          ports:
          - containerPort: 7073
          - containerPort: 7072
          volumeMounts:
          - name: flectra-rc
            mountPath: /etc/flectra
        volumes:
        - name: flectra-rc
          configMap:
            name: flectra-rc
            items:
              - key: flectra.conf
                path: flectra.conf
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data
      volumes:
        - name: pg-data
          emptyDir: {}
